2012-09-03 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added CDO option -L to lock all I/O calls. This option is neccessary if external I/O libraries like 
	  netCDF4 (HDF5) were installed without thread-safe support.

2012-08-30 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Sinfo: changed output format

2012-08-28 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.7 (merged from cdi-pio)
	* activate pstreamCopyRecord()
	* Version 1.5.7 released

2012-08-23 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Arith: bug fix for NVARS1 == NVARS2
                    This bug was introduced in CDO version 1.5.6.

2012-07-26 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Version 1.5.6.1 released
	* arradd: disable SSE2 optimazation (bug in residual loop)
	    The following statistical functions are affected:
	        *mean, *avg, *sum, *var, *std
	    if all of the following conditions are  complied:
	       - x86_64 machine (tornado, squall, thunder, lizard)
	       - dataset has no missing values
	       - the horizontal grid size is > 1 and not multiple of 8
            This bug was introduced in CDO version 1.5.6.

2012-07-23  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.6
	* Version 1.5.6 released

2012-07-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Fixed bug #2605

2012-07-17  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added operator zonrange

2012-07-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* vlistCompare(): added check to compare sorted parameter names

2012-07-11  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gradsdes: added support for 64-bit SERVICE, EXTRA and IEG format
	* import_binary: added support for 64-bit floats via extra OPTION keyword flt64 [request: Tim Bruecher]

2012-07-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sort_iter: call to sort_par() only for parent <= (nthreads-1)
	* added remapsort.c

2012-07-07  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
